--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ body{
   overflow-X: hidden;
 }
 
+body.locked{
+  overflow-Y:hidden;
+}
+
 h1,h2,h3,h4,h5,h6 {
   font-family: var(--heading-font-family);
   font-optical-sizing: auto;
@@ -110,7 +114,7 @@ header{
     padding: 0 var(--side-gap)
 }
 
-header a {
+header a,header .unlinked {
   font-size: 15.13px;
   font-style: normal;
   font-weight: 400;
@@ -300,6 +304,7 @@ float: right
     box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.1);
     z-index: 801;
     transition:1s;
+    overflow: scroll;
   }
   .burger-menu.active{
     /* left:50vw; */
